# FenestRA

./: .gitignore  LICENSE  README.md  setup.cfg
containers/: Dockerfile  dl_upsampling.def
recipe/: meta.yaml
src/fenestra/: __init__.py  _widget.py  napari.yaml  pipeline.py
src/fenestra/backend/: inference.py
src/napari_lsec_afm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
