[metadata]
name = FenestRA
version = 0.0.1
description = FenestRA: A Napari plugin for LSEC AFM Super-Resolution & Fenestration Analysis.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LIVR-VUB/FenestRA
author = Arka
author_email = your.email@example.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing

[options]
packages = find:
install_requires =
    numpy>=1.26.0,<2.0.0
    magicgui
    qtpy
    scikit-image
    scipy
    tifffile
    cellpose
    pandas
python_requires = >=3.10
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    FenestRA = fenestra:napari.yaml

[options.package_data]
* = *.yaml
